--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+  * {
+    box-sizing: border-box;
+  }
+
 	<title>Transfer photos to anywhere, anyone, at anytime. No login required.</title>	
 
 	<style type="text/css">    
@@ -19,12 +25,14 @@
   {
     text-align: center;
     font-family: sans-serif;
+    font-size: 10vw;
   }
 
   /* Style the top navigation bar */
   .topnav {
     overflow: hidden;
     background-color: #333;
+    font-size: 4vw;
   }
 
   /* Style the topnav links */
@@ -33,7 +41,7 @@
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 1vw 2vw;
     text-decoration: none;
   }
 
@@ -46,26 +54,27 @@
   /* Style the content */
   .content {
     background-color: #ddd;
-    padding: 10px;
+    font-size: 8vw;
+    padding:2vw;
   }
 
   /* Style the footer */
   .footer {
     background-color: #f1f1f1;
-    padding: 10px;
+    padding:2vw;
     text-align: right;
-    font-size: 10px;
+    font-size: 4vw;
   }
 
   h1
   {
-    font-size:36px;
+    font-size:10vw;
     color:rgb(20, 3, 104);
   }
 
   h2
   {
-    font-size:24px;
+    font-size:8vw;
     font-style: italic;
     color:rgb(31, 4, 161);
   }
