add stat and picture of the day links

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,14 +87,17 @@
 
   <div class="topnav">
     <a href="https://www.instagram.com/tothemaxx2020">Instagram</a>
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="/stat">Stat</a>
+    <a href="/pictureoftheday">Picture of The Day</a>
   </div>
 
   <div id="main-div" class="content">
     <form action="/upload" method="post" enctype="multipart/form-data">
-   <input type="file" name="file"/>
-   <input type="submit" value="Transfer"/>
-  </form> 
-</div>
+      <input type="file" name="file"/>
+      <input type="submit" value="Transfer"/>
+    </form> 
+  </div>
 
 <div class="footer">
   <p>
