--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,11 @@
     font-size: 3vw;
     padding:2vw;
   }
+  .content4 {
+    background-color: rgb(227, 232, 233);
+    font-size: 4vw;
+    padding:2vw;
+  }
 
   /* Style the footer */
   .footer {
@@ -134,6 +139,17 @@
       <input type="submit" value="Upload a Word">
     </form>         
   </div>
+  <div class="content4">
+    <form action="/plot" method="post" enctype="multipart/form-data">
+      <label>x:</label>
+      <textarea rows = "2" cols = "64" name = "xarray">.,.,.
+      </textarea><br>
+      <label>y:</label>
+      <textarea rows = "2" cols = "64" name = "yarray">.,.,.
+      </textarea><br>
+      <input type="submit" value="Plot">
+    </form>         
+  </div>  
 <div class="footer">
   <p>
     {% with messages = get_flashed_messages() %}
