add a feature to submit a note

--- a/templates/index.html
+++ b/templates/index.html
@@ -139,6 +139,17 @@
       <input type="submit" value="Upload a Word">
     </form>         
   </div>
+  <div class="content3">
+    <form action="/note" method="post" enctype="multipart/form-data">
+      <label>Note Label</label>
+      <input type="text" name="NoteLabel" value="..."><br>
+      </textarea><br>
+      <label>Note Text</label>
+      <textarea rows = "4" cols = "48" name = "NoteText">...
+      </textarea><br>
+      <input type="submit" value="Submit a Note">
+    </form>         
+  </div>  
   <div class="content4">
     <form action="/plot" method="post" enctype="multipart/form-data">
       <label>x:</label>
