--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
 <body>
 
   <div class="topnav">
-    <a href="https://www.instagram.com/tothemaxx2020">Instagram</a>
+    <a href="https://www.instagram.com/tothemax2050">Instagram</a>
     &nbsp;&nbsp;&nbsp;&nbsp;
     <a href="/stat">Stat</a>
     <a href="/pictureoftheday">Picture of The Day</a>
